--- a/src/app/pages/auth/signup/signup.html
+++ b/src/app/pages/auth/signup/signup.html
@@ -112,7 +112,7 @@
       </button>
     </form>
     <div class="self-center m-4 pb-4">
-      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Log In</a>
+      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 lg:hover:text-prussian-blue-500">Log In</a>
     </div>
   </div>
   <!-- right panel -->
