--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -9,7 +9,7 @@
           <div class="h-auto w-12 sm:w-[63px] flex-shrink-0">
             <img src="images/logo-coloured.svg" alt="Maestro Logo Icon" />
           </div>
-          <h2 class="font-serif text-3xl sm:text-5xl md:text-7xl font-bold leading-tight text-white">
+          <h2 class="font-serif text-3xl sm:text-5xl md:text-7xl leading-tight text-white">
             Maestro
           </h2>
         </div>
@@ -23,9 +23,9 @@
         <div class="mb-8 sm:mb-0">
           <h3 class="mb-4 text-lg sm:text-xl font-medium text-[#EAAA08]">Quick Links</h3>
           <ul class="space-y-2 sm:space-y-3 text-sm sm:text-base text-gray-300">
-            <li><a (click)="onHomeClick()" class="hover:text-white cursor-pointer">Home</a></li>
-            <li><a (click)="onFeaturesClick()" class="hover:text-white cursor-pointer">Features</a></li>
-            <li><a (click)="onPricingClick()" class="hover:text-white cursor-pointer">Pricing</a></li>
+            <li><a (click)="onHomeClick()" class="lg:hover:text-white cursor-pointer">Home</a></li>
+            <li><a (click)="onFeaturesClick()" class="lg:hover:text-white cursor-pointer">Features</a></li>
+            <li><a (click)="onPricingClick()" class="lg:hover:text-white cursor-pointer">Pricing</a></li>
           </ul>
         </div>
 
@@ -33,7 +33,7 @@
           <h3 class="mb-4 text-lg sm:text-xl font-medium text-[#EAAA08]">Contact Information</h3>
           <p class="flex items-center space-x-2 text-sm sm:text-base text-gray-300">
             <img src="images/EnvelopeSimple.svg" />
-            <span>maestroaidevs@gmail.com</span>
+            <span>support@maestrolearningplatform.com</span>
           </p>
         </div>
       </div>
@@ -48,15 +48,18 @@
         &copy; 2025 Maestro. All rights reserved.
       </p>
       <div class="flex space-x-4">
-        <a href="https://www.linkedin.com/" target="_blank">
-          <img src="images/linkedin.svg" alt="linkedin icon" />
+        <a href="https://www.linkedin.com/company/overmind-tech/" target="_blank">
+          <img src="images/linkedin.svg" alt="linkedin icon"  class="w-12 lg:w-20"/>
         </a>
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="images/facebook.svg" alt="facebook icon" />
+        <a href="https://discord.gg/FNawhhghKC" target="_blank">
+          <img src="images/discord-icon.png" alt="discord icon" class="w-12 lg:w-20"/>
+        </a>
+        <!-- <a href="https://www.facebook.com/" target="_blank">
+          <img src="images/facebook.svg" alt="facebook icon" class="w-20"/>
         </a>
         <a href="https://www.instagram.com/" target="_blank">
-          <img src="images/instagram.svg" alt="instagram icon" />
-        </a>
+          <img src="images/instagram.svg" alt="instagram icon" class="w-20"/>
+        </a> -->
       </div>
     </div>
   </div>
