--- a/src/app/pages/home/features/features.html
+++ b/src/app/pages/home/features/features.html
@@ -1,10 +1,13 @@
 <!-- Main Container for Features Component -->
 <section class="bg-gray-50 py-12 sm:py-16 md:py-24">
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="mb-12 text-center">
-      <p class="font-light text-lg sm:text-xl md:text-2xl leading-6 sm:leading-7 uppercase text-[#1D353E]">
-        Features
-      </p>
+  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-12">
+    <div class="mb-12 lg:mb-28 text-center">
+      <div class="flex flex-row items-center justify-center">
+        <div class="rounded-full bg-prussian-blue-900 p-2 mr-4"></div>
+        <p class="font-light text-lg sm:text-xl md:text-2xl leading-6 sm:leading-7 uppercase text-[#1D353E] mr-4">
+          Features
+        </p>
+      </div>
       <!-- Title -->
       <h2 class="mx-auto mt-4 max-w-xl text-center font-normal text-2xl sm:text-3xl md:text-[40px] leading-snug md:leading-[48px] text-[#264653]">
         Experience Smarter Learning, Designed for You
