--- a/src/app/pages/home/landing/landing.html
+++ b/src/app/pages/home/landing/landing.html
@@ -19,15 +19,15 @@
 
       <!-- Nav Bar -->
       <nav class="hidden md:flex items-center space-x-6 sm:space-x-10 text-base sm:text-lg text-white">
-        <a (click)="onHomeClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Home</a>
-        <a (click)="onFeaturesClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Features</a>
-        <a (click)="onPricingClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Pricing</a>
-        <a (click)="onContactClick()" class="font-medium hover:text-prussian-blue-500 cursor-pointer">Contact us</a>
+        <a (click)="onHomeClick()" class="font-medium lg:hover:text-prussian-blue-500 cursor-pointer">Home</a>
+        <a (click)="onFeaturesClick()" class="font-medium lg:hover:text-prussian-blue-500 cursor-pointer">Features</a>
+        <a (click)="onPricingClick()" class="font-medium lg:hover:text-prussian-blue-500 cursor-pointer">Pricing</a>
+        <a (click)="onContactClick()" class="font-medium lg:hover:text-prussian-blue-500 cursor-pointer">Contact us</a>
       </nav>
 
       <button
         (click)="onGetStartedClick()"
-        class="rounded-md bg-prussian-blue-900 px-4 sm:px-6 md:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition hover:bg-prussian-blue-700"
+        class="rounded-md bg-prussian-blue-900 px-4 sm:px-6 md:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition lg:hover:bg-prussian-blue-700"
       >
         Try Maestro
       </button>
@@ -45,7 +45,7 @@
         </p>
         <button
           (click)="onGetStartedClick()"
-          class="rounded-md bg-prussian-blue-900 px-4 sm:px-6 md:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold transition hover:bg-prussian-blue-700"
+          class="rounded-md bg-prussian-blue-900 px-4 sm:px-6 md:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold transition lg:hover:bg-prussian-blue-700"
         >
           Get Started
         </button>
@@ -53,7 +53,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="absolute bottom-20 w-full text-center px-4">
+    <footer class="absolute bottom-24 w-full text-center px-4">
       <p class="font-normal italic text-sm sm:text-base md:text-xl leading-6 sm:leading-7 text-gray-100">
         Be among the first to shape the future of learning.
       </p>
