--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -10,7 +10,7 @@
     <!-- Actions: Logout button + profile image -->
   </div>
   <button
-    class="rounded-full p-1 hover:bg-gray-100"
+    class="rounded-full p-1 lg:hover:bg-gray-100"
     (click)="popout()"
   >
     <img src="images/profile-icon.svg" alt="Profile" class="w-8 md:w-12">
@@ -56,7 +56,7 @@
 
     <!-- Logout -->
     <button
-      class="flex flex-row items-center w-full hover:bg-gray-100 py-2 rounded-lg"
+      class="flex flex-row items-center w-full lg:hover:bg-gray-100 py-2 rounded-lg"
       (click)="openLogout()"
     >
       <img src="images/logout-icon.svg" alt="" class="w-6 mx-1">
