--- a/src/app/pages/not-found/not-found.html
+++ b/src/app/pages/not-found/not-found.html
@@ -10,7 +10,7 @@
       <h1 class="text-6xl my-2 lg:text-8xl font-bold lg:my-4">404</h1>
       <span class="block text-lg font-bold my-2">Oops! Looks like you've gone off-topic.</span>
       Even Maestro can't find this page — but we can help you get back to learning.
-      <button class="block text-sm bg-prussian-blue-900 text-white p-4 rounded-md hover:bg-prussian-blue-500 my-4 mx-auto w-fit lg:mx-0" (click)="goHome()">
+      <button class="block text-sm bg-prussian-blue-900 text-white p-4 rounded-md lg:hover:bg-prussian-blue-500 my-4 mx-auto w-fit lg:mx-0" (click)="goHome()">
         Return to Home
       </button>
     </div>
