--- a/src/app/shared/components/confirm-logout/confirm-logout.html
+++ b/src/app/shared/components/confirm-logout/confirm-logout.html
@@ -10,13 +10,13 @@
     <p class="text-gray-700 mb-4">Are you sure you want to log out?</p>
     <div class="flex justify-end space-x-3">
       <button
-        class="px-4 py-2 bg-gray-200 rounded hover:bg-gray-300"
+        class="px-4 py-2 bg-gray-200 rounded lg:hover:bg-gray-300"
         (click)="cancel.emit()"
       >
         Cancel
       </button>
       <button
-        class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700"
+        class="px-4 py-2 bg-red-600 text-white rounded lg:hover:bg-red-700"
         (click)="confirm.emit()"
       >
         Yes, Logout
