--- a/src/app/shared/components/confirmation/confirmation.html
+++ b/src/app/shared/components/confirmation/confirmation.html
@@ -10,13 +10,13 @@
     <p class="text-gray-700 mb-4">{{message()}}</p>
     <div class="flex justify-end space-x-3">
       <button
-        class="px-4 py-2 bg-gray-200 rounded hover:bg-gray-300"
+        class="px-4 py-2 bg-gray-200 rounded lg:hover:bg-gray-300"
         (click)="cancel.emit()"
       >
         {{cancelText()}}
       </button>
       <button
-        class="px-4 py-2 bg-prussian-blue-800 text-white rounded hover:bg-prussian-blue-500"
+        class="px-4 py-2 bg-prussian-blue-800 text-white rounded lg:hover:bg-prussian-blue-500"
         (click)="confirm.emit()"
       >
         {{acceptText()}}
