--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -60,7 +60,7 @@
       <p class="mt-4 text-xs sm:text-sm text-gray-400">
         For consistent learners who need more flexibility.
       </p>
-      <hr class="mt-4 w-full border-t gradient-border-purple" />
+      <hr class="mt-4 w-full border-t gradient-border-white" />
       <div class="mt-8">
         <h4 class="font-medium">Features</h4>
         <ul class="mt-4 space-y-4 text-left text-gray-400 text-sm sm:text-base">
