--- a/src/app/pages/home/contact/contact.html
+++ b/src/app/pages/home/contact/contact.html
@@ -29,12 +29,14 @@
           </ul>
         </div>
 
-        <div>
+        <div class="flex flex-col text-gray-300">
           <h3 class="mb-4 text-lg sm:text-xl font-medium text-[#EAAA08]">Contact Information</h3>
-          <p class="flex items-center space-x-2 text-sm sm:text-base text-gray-300">
+          <p class="flex items-center space-x-2 text-sm sm:text-base md:hover:text-white">
             <img src="images/EnvelopeSimple.svg" />
-            <span>support@maestrolearningplatform.com</span>
+            <a href="mailto:support@maestrolearningplatform.com">support@maestrolearningplatform.com</a>
           </p>
+          <a routerLink="/privacy-policy" class="text-sm sm:text-base mt-3 md:hover:text-white">Privacy Policy</a>
+          <a routerLink="/terms-of-service" class="text-sm sm:text-base mt-3 md:hover:text-white">Terms of Service</a>
         </div>
       </div>
     </div>
