--- a/src/app/shared/components/confirmation/confirmation.html
+++ b/src/app/shared/components/confirmation/confirmation.html
@@ -1,26 +1,28 @@
-<div
-  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
-  (click)="cancel.emit()"
->
+@if (show) {
   <div
-    class="bg-white rounded-lg p-6 max-w-sm w-full shadow-lg"
-    (click)="$event.stopPropagation()"
+    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+    (click)="confirm(false)"
   >
-    <h3 class="text-xl font-semibold mb-2">{{title()}}</h3>
-    <p class="text-gray-700 mb-4">{{message()}}</p>
-    <div class="flex justify-end space-x-3">
-      <button
-        class="px-4 py-2 bg-gray-200 rounded lg:hover:bg-gray-300"
-        (click)="cancel.emit()"
-      >
-        {{cancelText()}}
-      </button>
-      <button
-        class="px-4 py-2 bg-prussian-blue-800 text-white rounded lg:hover:bg-prussian-blue-500"
-        (click)="confirm.emit()"
-      >
-        {{acceptText()}}
-      </button>
+    <div
+      class="bg-white rounded-lg p-6 max-w-sm w-full shadow-lg"
+      (click)="$event.stopPropagation()"
+    >
+      <h3 class="text-xl font-semibold mb-2">{{options.title}}</h3>
+      <p class="text-gray-700 mb-4">{{options.message}}</p>
+      <div class="flex justify-end space-x-3">
+        <button
+          class="px-4 py-2 bg-gray-200 rounded lg:hover:bg-gray-300"
+          (click)="confirm(false)"
+        >
+          {{options.cancelText}}
+        </button>
+        <button
+          class="px-4 py-2 bg-prussian-blue-800 text-white rounded lg:hover:bg-prussian-blue-500"
+          (click)="confirm(true)"
+        >
+          {{options.okText}}
+        </button>
+      </div>
     </div>
   </div>
-</div>
+}
