Fixed essay feedback bug and added next from subtopic to exercise

--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -14,7 +14,7 @@
             : 'prose prose-math self-start bg-gray-100 text-gray-900 rounded-bl-none'}`"
         style="max-width: 80%;"
       >
-      <span [innerHTML]="chat.message | markdown"></span>
+      <span class="block" [innerHTML]="chat.message | markdown"></span>
       </div>
     }
   </div>
