--- a/src/app/pages/dashboard/subscription/subscription.html
+++ b/src/app/pages/dashboard/subscription/subscription.html
@@ -154,7 +154,7 @@
               <img [src]="`images/${status()?.plan_code == plan.code ? 'starblack' : 'starwhite'}.svg`" class="w-4 mb-2">  
               <h3 class="text-lg font-semibold">{{plan.name}}</h3>
               <!-- ${status()?.plan_code == plan.code ? '' : ''} -->
-              <p class="text-3xl font-bold mt-1">₦{{plan.price | number:'1.0-0'}} <span [class]="`text-sm font-light ${status()?.plan_code == plan.code ? '' : 'text-gray-300'}`">/month</span></p>
+              <p class="text-3xl font-bold mt-1">{{ countryCode() | currencyLocalizer}}{{plan.display_price | number:'1.0-0'}} <span [class]="`text-sm font-light ${status()?.plan_code == plan.code ? '' : 'text-gray-300'}`">/month</span></p>
               <p [class]="`text-sm ${status()?.plan_code == plan.code ? '' : 'text-gray-300'} mt-1`">{{plan.description}}</p>
     
               <hr class="mt-4 border-t border-gray-600" />
@@ -189,6 +189,9 @@
 
       </div>
 
+    }
+    @if (countryCode() !== "NG") {
+      <div class="text-sm">*Prices shown in {{ countryCode() }} currency. Charged in NGN. Your bank converts at their rate.</div>
     }
   </main>
 
