--- a/src/app/pages/home/pricing/pricing.html
+++ b/src/app/pages/home/pricing/pricing.html
@@ -15,7 +15,7 @@
     <div class="self-center md:self-end flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[32px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Basic</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
-        <span>₦</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
+        <span>{{ countryCode | currencyLocalizer }}</span>{{ basicPrice | number:'1.0-0' }}<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
         <!-- <span>$</span>0<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span> -->
       </div>
       <button class="mt-6 w-full rounded-full bg-[#002D4B] px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition lg:hover:bg-gray-800" routerLink="/login">
@@ -51,7 +51,7 @@
       </div>
       <h3 class="mt-4 text-xl sm:text-2xl font-semibold">Standard</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold">
-        <span>₦</span>8,000<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span>
+        <span>{{ countryCode | currencyLocalizer }}</span>{{ standardPrice | number:'1.0-0' }}<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span>
         <!-- <span>$</span>5<span class="text-xs sm:text-sm font-normal text-gray-400">/per month</span> -->
       </div>
       <button class="mt-6 w-full rounded-full bg-white px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-[#262626] transition lg:hover:bg-gray-200" routerLink="/login">
@@ -84,7 +84,7 @@
     <div class="self-center md:self-start flex h-full md:flex-1 w-5/6 flex-col items-start rounded-[36px] border border-[#BFBFBF] bg-white p-6 sm:p-8 text-center shadow-lg md:mt-24">
       <h3 class="text-xl sm:text-2xl font-semibold text-[#264653]">Premium</h3>
       <div class="mt-2 text-3xl sm:text-4xl font-bold text-[#264653]">
-        <span>₦</span>20,000<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
+        <span>{{ countryCode | currencyLocalizer }}</span>{{ premiumPrice | number:'1.0-0' }}<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span>
         <!-- <span>$</span>12<span class="text-xs sm:text-sm font-normal text-gray-500">/per month</span> -->
       </div>
       <button class="mt-6 w-full rounded-full bg-[#002D4B] px-6 sm:px-8 py-3 sm:py-4 text-base sm:text-lg font-semibold text-white transition lg:hover:bg-gray-800" routerLink="/login">
