--- a/src/app/pages/auth/check-email/check-email.html
+++ b/src/app/pages/auth/check-email/check-email.html
@@ -5,7 +5,7 @@
     <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
+      <span class="font-serif text-3xl h-max text-[var(--text-primary)]">Maestro</span>
     </div>
 
     <div class="flex flex-col h-3/4 justify-between">
@@ -14,7 +14,7 @@
         <p>A verification mail has been sent to <span class="font-bold">{{email}}</span></p>
       </div>
       <button 
-        class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-400 lg:hover:text-prussian-blue-400"
+        class="text-left font-bold text-[var(--text-primary)] disabled:text-[var(--text-primary-hover)] lg:hover:text-[var(--text-primary-hover)]"
         [disabled]="(resendTimer > 0) || (loading)"
         (click)="resendVerificationEmail()"
       >
