--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -5,19 +5,19 @@
     <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
+      <span class="font-serif text-3xl h-max text-[var(--text-primary)]">Maestro</span>
     </div>
-    <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome Back!</h1>
+    <h1 class="font-bold text-2xl text-[var(--text-alt)] my-2">Welcome Back!</h1>
     <p class="">Access your personalized lessons and materials.</p>
     <form class="mt-2" #form="ngForm">
       <!-- Email Input -->
       <div class="flex flex-col my-6 font-medium">
-        <label class="text-gray-400">Email Address</label>
+        <label class="text-[var(--text-alt-hover)]">Email Address</label>
         <input
           type="email"
           name="email"
           placeholder="Email Address"
-          class="bg-gray-100 p-4 rounded-md"
+          class="bg-gray-100 p-4 rounded-md text-gray-900"
           [(ngModel)]="email"
           required
           email
@@ -34,12 +34,12 @@
 
       <!-- Password Input -->
       <div class="flex flex-col my-6 font-medium relative">
-        <label class="text-gray-400">Password</label>
+        <label class="text-[var(--text-alt-hover)]">Password</label>
         <input 
           [type]="passwordVisible" 
           name="password" 
           placeholder="Password" 
-          class="bg-gray-100 p-4 rounded-md" 
+          class="bg-gray-100 p-4 rounded-md text-gray-900" 
           [(ngModel)]="password"
           required
           password
@@ -58,7 +58,7 @@
 
       <button 
         type="submit" 
-        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-400 disabled:bg-prussian-blue-400 relative" 
+        class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-700 lg:hover:bg-prussian-blue-400 disabled:bg-prussian-blue-400 relative" 
         (click)="onSubmit()" 
         [disabled]="loading"
       >
@@ -67,7 +67,7 @@
       </button>
     </form>
     <div class="self-center m-4 pb-4">
-      New to Maestro? <a href="/signup" class="font-medium text-prussian-blue-900 lg:hover:text-prussian-blue-400">Sign Up!</a>
+      New to Maestro? <a href="/signup" class="font-medium text-[var(--text-primary)] lg:hover:text-[var(--text-primary-hover)]">Sign Up!</a>
     </div>
   </div>
   <!-- right panel -->
