--- a/src/app/pages/auth/verify-email/verify-email.html
+++ b/src/app/pages/auth/verify-email/verify-email.html
@@ -5,7 +5,7 @@
     <!-- Header -->
     <div class="flex flex-row my-8 items-center">
       <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">
-      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>
+      <span class="font-serif text-3xl h-max text-[var(--text-primary)]">Maestro</span>
     </div>
 
     @if (verified) {
