--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -26,7 +26,7 @@
       <div class="flex flex-row w-full justify-between my-4 space-y-4 md:space-y-0">
         <div class="flex flex-row items-center">
           <img src="images/subject-icon.svg" alt="" class="w-4 mx-4">
-          <span class="font-medium text-prussian-blue-900">My Subjects</span>
+          <span class="font-medium text-[var(--text-primary)]">My Subjects</span>
         </div>
         <button 
           class="w-max rounded-md px-5 py-3 text-white bg-prussian-blue-700 lg:hover:bg-prussian-blue-400 disabled:bg-prussian-blue-400 flex flex-row justify-center text-xs" 
@@ -43,7 +43,7 @@
         @for (subject of subjects; track subject.id) {
           <!-- Subjects Item -->
           <button 
-            class="relative flex flex-col justify-between overflow-hidden rounded-lg w-full sm:w-56 h-28 p-4 m-4 bg-prussian-blue-100 lg:hover:bg-prussian-blue-200 lg:hover:top-2"
+            class="relative flex flex-col justify-between overflow-hidden rounded-lg w-full sm:w-56 h-28 p-4 m-4 bg-[var(--bg-card)] lg:hover:bg-[var(--bg-card-hover)] lg:hover:top-2"
             (click)="navigateSubject(subject)"
             (contextmenu)="onSubjectRightClick($event, subject)"
           >
@@ -66,7 +66,7 @@
                   <div class="h-full bg-prussian-blue-700 rounded-full" [ngStyle]="{ width: subject.completion*100 + '%' }"></div>
                 </div>
               </div>
-              <span>{{(subject.completion*100).toFixed(0)}}%</span>
+              <span class="text-prussian-blue-900">{{(subject.completion*100).toFixed(0)}}%</span>
             </div>
           </button>
         }
@@ -76,7 +76,7 @@
       <a 
         href="https://forms.gle/y6B3ReSJXCstUAE89" 
         target="_blank"
-        class="absolute bottom-4 left-4 lg:bottom-8 lg:left-8 rounded-full bg-prussian-blue-200 lg:hover:bg-prussian-blue-300 p-3 lg:p-4"
+        class="absolute bottom-4 left-4 lg:bottom-8 lg:left-8 rounded-full bg-[var(--bg-card)] lg:hover:bg-[var(--bg-card-hover)] p-3 lg:p-4"
       >
         <!-- <img src="images/feedback.png" alt="" class="w-6 lg:w-8">  -->
         <img src="images/chat-popup-icon.svg" alt="" class="w-6 lg:w-8"> 
@@ -88,7 +88,7 @@
 <!-- Popup Delete button -->
 @if (rightClickSubject) {
   <div 
-    [class]="`fixed p-1 bg-white rounded-md flex flex-col items-center justify-center top-[${popup.y}px] left-[${popup.x}px]`"
+    [class]="`fixed p-1 bg-[var(--bg-page)] rounded-md flex flex-col items-center justify-center top-[${popup.y}px] left-[${popup.x}px]`"
     [style.top.px]="popup.y + 8"
     [style.left.px]="popup.x + 8"
   >
