--- a/src/app/pages/lesson/chatbot/chatbot.html
+++ b/src/app/pages/lesson/chatbot/chatbot.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-end h-full w-full bg-white border-l-2 p-2">
+<div class="flex flex-col justify-end h-full w-full bg-[var(--bg-page)] border-l-2 p-2">
   <!-- Close Button -->
   <button class="absolute top-2 justify-self-start p-3 rounded-full bg-prussian-blue-700 lg:hover:bg-prussian-blue-400" (click)="onCloseChat()">
     <img src="images/x-icon.svg" alt="">
@@ -11,7 +11,7 @@
         [class]="`rounded-2xl p-3 my-1 break-words text-sm 
           ${(chat.sender === 'user') 
             ? 'self-end bg-prussian-blue-700 text-white rounded-br-none' 
-            : 'prose prose-math self-start bg-gray-100 text-gray-900 rounded-bl-none'}`"
+            : 'prose prose-math self-start bg-[var(--bg-card)] text-gray-900 rounded-bl-none'}`"
         style="max-width: 80%;"
       >
       <span class="block" [innerHTML]="chat.message | markdown"></span>
@@ -22,7 +22,7 @@
   <!-- Text Input -->
   <div class="w-full flex flex-col place-self-end">
     <textarea 
-      class="p-2 my-2 border-2 rounded-md overflow-hidden w-full"
+      class="p-2 my-2 border-2 rounded-md overflow-hidden w-full bg-[var(--bg-page)]"
       rows="1"
       [(ngModel)]="currentMessage"
       [disabled]="loading"
