--- a/src/app/pages/subject-create/question-settings/question-settings.html
+++ b/src/app/pages/subject-create/question-settings/question-settings.html
@@ -22,7 +22,7 @@
   </div>
 
   <h1 class="text-2xl mb-2 font-medium">Set Practice Questions</h1>
-  <p class="mb-4 text-gray-600">
+  <p class="mb-4 text-[var(--text-alt)]">
     You can choose to generate practice exercises as well as an exam alongside the lesson.
   </p>
 
@@ -63,7 +63,7 @@
           <input 
             type="number" 
             name="exerciseCount" 
-            class="bg-gray-50 p-2 rounded-lg border border-2 text-sm w-12 mx-4" 
+            class="bg-[var(--bg-page)] p-2 rounded-lg border border-2 text-sm w-12 mx-4" 
             [disabled]="!exerciseSettings.include || loading"
             [(ngModel)]="exerciseSettings.numQuestions"
             [required]="exerciseSettings.include"
@@ -79,7 +79,7 @@
           type="text" 
           name="exercisePreference" 
           placeholder="Input your custom instructions for exercise generation here." 
-          class="bg-gray-50 p-4 rounded-lg border border-2 h-32 text-sm w-11/12" 
+          class="bg-[var(--bg-page)] p-4 rounded-lg border border-2 h-32 text-sm w-11/12" 
           [(ngModel)]="exerciseSettings.preference"
           [disabled]="!exerciseSettings.include || loading"
           #exercisePreferenceCtrl="ngModel"
@@ -132,7 +132,7 @@
           <input 
             type="number" 
             name="examCount" 
-            class="bg-gray-50 p-2 rounded-lg border border-2 text-sm w-12 mx-4" 
+            class="bg-[var(--bg-page)] p-2 rounded-lg border border-2 text-sm w-12 mx-4" 
             [disabled]="!examSettings.include || loading"
             [(ngModel)]="examSettings.numQuestions"
             [required]="examSettings.include"
@@ -148,7 +148,7 @@
             type="text" 
             name="examPreference" 
             placeholder="Input your custom instructions for exam generation here." 
-            class="bg-gray-50 p-4 rounded-lg border border-2 h-32 text-sm w-11/12" 
+            class="bg-[var(--bg-page)] p-4 rounded-lg border border-2 h-32 text-sm w-11/12" 
             [(ngModel)]="examSettings.preference"
             [disabled]="!examSettings.include || loading"
             #examPreferenceCtrl="ngModel"
